# awesome-rust

./: .ecrc  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  README_stars.md  UNSTABLE.md  ab-results-README.md-filtered.json  ab-results-README.md-markdown-table.json  ab-results-README.md.json  awesome_rust_with_repo_info.md  cleanup.py  dummy.rs  generate_markdown_files.py  hello.rs  last-commit.sh  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  i-want-to-add-a-project-to-the-list.md
.github/workflows/: approve.yml  autocloser.yml  links.yml  lint.yml  pr_tidyup.yml  rust.yml
results/: .gitignore
src/: main.rs
