[package]
name = "awesome-rust"
version = "0.1.0"
authors = []
homepage = "https://github.com/rust-unofficial/awesome-rust"
repository = "https://github.com/rust-unofficial/awesome-rust"
edition = "2018"
default-run = "awesome-rust"

[dependencies]
pulldown-cmark = "0.8"
futures = "0.3"
reqwest = { version="0.11", default_features=false, features=["rustls-tls", "json"] }
tokio = {version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
hyper = "0.14"
failure = "0.1"
lazy_static = "1"
env_logger = "0.8"
log = "0.4"
regex = "1"
scraper = "0.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
diffy = "0.2"
serde_json = "*"
